--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,9 @@
 }
 
 body {
-    /* background-image: url(Media/background-pattern-desktop.svg); */
+    background: url("Media/background-pattern-desktop.svg") 0 0 no-repeat;
     background-color:  hsl(275, 100%, 97%);
-     display: block;
+    background-size: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -15,11 +15,13 @@ body {
 }
 
 main {
-    margin-top: 5%;
-    width: 50%;
-    border-radius: 20px;
-    padding: 2.3rem 1.5rem 2.3rem 1.8rem;
+    margin-top: 10%;
+    width: 37%;
+    border-radius: 0.8em;
+    padding: 1.6rem 1.4rem 1.4rem 1.6rem;
     background-color: hsl(0, 100%, 100%);
+    display: flex;
+    flex-direction: column;
 }
 
 h1, h2 {
@@ -27,13 +29,14 @@ h1, h2 {
 }
 
 p {
-    font-size: 14px;
-    margin: 0 0 20px;
+    font-size: 13px;
+    margin: 0 0 3.5%;
     display: none;
+    color: rgb(118, 118, 118);
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 0.9em;
     margin: 8px 0;
     padding: 5px 0;
 }
@@ -41,11 +44,12 @@ h2 {
 #heading {
     display: flex;
     align-items: center;
+    margin-bottom: 0.7em;
 }
 
 h1 {
     font-weight: 700;
-    font-size: 45px;
+    font-size: 2.7em;
 }
 
 .question1, .question2, .question3, .question4 {
@@ -56,11 +60,12 @@ h1 {
 }
 
 .star {
-    margin: 0 10px 0 0;
+    margin: 0 0.7em 0 0;
 }
 
 .plus {
-    font-size: 10px;
+    width: 1.4em;
+    height: 1.4em;
 }
 
 .plus:hover {
@@ -68,6 +73,6 @@ h1 {
 }
 
 #drop-1, #drop-2, #drop-3 {
-    border-bottom: 1px solid black;
-    margin: 0 0 10px 0;
+    border-bottom: 1px solid rgb(240, 240, 240);
+    margin: 0 0 0.8em 0;
 }
